--- a/index.html
+++ b/index.html
@@ -410,7 +410,7 @@ body.minimode #scrollBtn{display:none!important}
    CONFIG
 ══════════════════════════════════════════════ */
 const KEYS_URL = 'https://jxoj.github.io/Ozo/keys.json';
-const MODEL = 'google/gemini-2.0-flash-lite-001';
+const MODEL = 'google/gemini-2.0-flash-001';
 const OR_URL = 'https://openrouter.ai/api/v1/chat/completions';
 
 let API_KEY = '';
